--- a/MedicalExamination/res/layout/activity_main.xml
+++ b/MedicalExamination/res/layout/activity_main.xml
@@ -71,7 +71,9 @@
             <ListView
                 android:id="@+id/menu_list "
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent"
+                android:choiceMode="singleChoice"
+                android:listSelector="@android:color/darker_gray" >
             </ListView>
         </RelativeLayout>
     </android.support.v4.widget.DrawerLayout>
