--- a/MedicalExamination/res/values/styles.xml
+++ b/MedicalExamination/res/values/styles.xml
@@ -35,4 +35,16 @@
 
     <style name="ButtonBarButton" />
 
+    <style name="menu_item_text_style">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#494949</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
